<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cryptoDetailActivity.CryptoDetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="15dp">


                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/Rs"
                    app:layout_constraintBottom_toBottomOf="@+id/ask_price"
                    app:layout_constraintEnd_toStartOf="@+id/ask_price"
                    app:layout_constraintTop_toTopOf="@+id/ask_price" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/Rs"
                    app:layout_constraintBottom_toBottomOf="@+id/last_open"
                    app:layout_constraintEnd_toStartOf="@+id/last_open"
                    app:layout_constraintStart_toStartOf="@+id/textView21"
                    app:layout_constraintTop_toTopOf="@+id/last_open" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/Rs"
                    app:layout_constraintBottom_toBottomOf="@+id/price_today"
                    app:layout_constraintEnd_toStartOf="@+id/price_today"
                    app:layout_constraintTop_toTopOf="@+id/price_today" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/Rs"
                    app:layout_constraintBottom_toBottomOf="@+id/high_price"
                    app:layout_constraintEnd_toStartOf="@+id/high_price"
                    app:layout_constraintTop_toTopOf="@+id/high_price" />

                <TextView
                    android:id="@+id/coin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/baseAsset"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/sell" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/Rs"
                    app:layout_constraintBottom_toBottomOf="@+id/low_price"
                    app:layout_constraintEnd_toStartOf="@+id/low_price"
                    app:layout_constraintTop_toTopOf="@+id/low_price" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="Crypto"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/coin" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/lowPrice"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/low_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="TextView"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView11"
                    app:layout_constraintStart_toStartOf="@+id/coin"
                    app:layout_constraintTop_toBottomOf="@+id/coin" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/highPrice"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/textView11"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/volume"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/textView13"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <TextView
                    android:id="@+id/high_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="TextView"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView13"
                    app:layout_constraintStart_toStartOf="@+id/low_price"
                    app:layout_constraintTop_toBottomOf="@+id/low_price" />

                <TextView
                    android:id="@+id/volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="TextView"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView14"
                    app:layout_constraintStart_toStartOf="@+id/textView22"
                    app:layout_constraintTop_toBottomOf="@+id/high_price" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/openPrice"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/textView14"
                    app:layout_constraintTop_toBottomOf="@+id/textView14" />

                <TextView
                    android:id="@+id/price_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="TextView"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/textView22"
                    app:layout_constraintTop_toBottomOf="@+id/volume" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/lastPrice"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/textView17"
                    app:layout_constraintTop_toBottomOf="@+id/textView17" />

                <TextView
                    android:id="@+id/last_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="TextView"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/textView21"
                    app:layout_constraintTop_toBottomOf="@+id/price_today" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/askPrice"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/textView19"
                    app:layout_constraintTop_toBottomOf="@+id/textView19" />

                <TextView
                    android:id="@+id/ask_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="TextView"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/last_open"
                    app:layout_constraintTop_toBottomOf="@+id/last_open" />

                <TextView
                    android:id="@+id/time_stamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="8dp"
                    android:text="TextView"
                    app:layout_constraintStart_toEndOf="@+id/textView18"
                    app:layout_constraintTop_toBottomOf="@+id/ask_price" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="at"
                    app:layout_constraintBottom_toBottomOf="@+id/time_stamp"
                    app:layout_constraintStart_toStartOf="@+id/textView15"
                    app:layout_constraintTop_toBottomOf="@+id/textView15" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="sell"
                    android:textColor="@color/card"
                    android:textSize="15sp"
                    app:backgroundTint="@android:color/transparent"
                    app:cornerRadius="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/buy2"
                    app:rippleColor="#33AAAAAA"
                    app:strokeColor="@color/card"
                    app:strokeWidth="2dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buy2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="buy"
                    android:textColor="@color/card"
                    android:textSize="15sp"
                    app:backgroundTint="@android:color/transparent"
                    app:cornerRadius="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time_stamp"
                    app:rippleColor="#33AAAAAA"
                    app:strokeColor="@color/card"
                    app:strokeWidth="2dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="add to watchlist"
                    android:textColor="@color/card"
                    android:textSize="15sp"
                    app:backgroundTint="@android:color/transparent"
                    app:cornerRadius="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:rippleColor="#33AAAAAA"
                    app:strokeColor="@color/card"
                    app:strokeWidth="2dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/no_internet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/no_internet"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/no_internet1" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>